[gd_scene load_steps=20 format=3 uid="uid://dpp2pnptid67w"]

[ext_resource type="Texture2D" uid="uid://cgmdowlenwyyt" path="res://assets/sprites/pwincess.png" id="1_ocxg1"]
[ext_resource type="Script" uid="uid://b0sh46m10jtgd" path="res://scripts/pwincess.gd" id="1_x5xqm"]
[ext_resource type="AudioStream" uid="uid://dnnvrn0xcj2iv" path="res://assets/sounds/win.wav" id="3_j424o"]
[ext_resource type="AudioStream" uid="uid://cmqeq5e7itx46" path="res://assets/sounds/lose.wav" id="4_hx7us"]
[ext_resource type="FontFile" uid="uid://ch3jg6frv3btp" path="res://assets/fonts/PixelOperator8.ttf" id="5_j424o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_838jo"]
atlas = ExtResource("1_ocxg1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcwv2"]
atlas = ExtResource("1_ocxg1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5xqm"]
atlas = ExtResource("1_ocxg1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j424o"]
atlas = ExtResource("1_ocxg1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hx7us"]
atlas = ExtResource("1_ocxg1")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4yan"]
atlas = ExtResource("1_ocxg1")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa55g"]
atlas = ExtResource("1_ocxg1")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6n5f"]
atlas = ExtResource("1_ocxg1")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fonkf"]
atlas = ExtResource("1_ocxg1")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kux7"]
atlas = ExtResource("1_ocxg1")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tve5"]
atlas = ExtResource("1_ocxg1")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycsas"]
atlas = ExtResource("1_ocxg1")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_dbjlg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_838jo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcwv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5xqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j424o")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hx7us")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4yan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa55g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6n5f")
}],
"loop": true,
"name": &"lose",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fonkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kux7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tve5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycsas")
}],
"loop": true,
"name": &"win",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ocxg1"]
size = Vector2(182, 79)

[node name="pwincess" type="Area2D"]
collision_mask = 16
script = ExtResource("1_x5xqm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dbjlg")
animation = &"idle"
autoplay = "idle"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -27.5)
shape = SubResource("RectangleShape2D_ocxg1")

[node name="audio_win" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_j424o")

[node name="audio_lose" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_hx7us")

[node name="Label_win" type="Label" parent="."]
visible = false
offset_left = -77.0
offset_top = -35.0
offset_right = 78.0
offset_bottom = -12.0
theme_override_colors/font_color = Color(0.717647, 0.772549, 0.819608, 1)
theme_override_fonts/font = ExtResource("5_j424o")
theme_override_font_sizes/font_size = 8
text = "Merci de m'avoir sauv√©e!"

[node name="Label_lose" type="Label" parent="."]
visible = false
offset_left = -68.0
offset_top = -45.0
offset_right = 69.0
offset_bottom = -22.0
theme_override_colors/font_color = Color(0.717647, 0.772549, 0.819608, 1)
theme_override_fonts/font = ExtResource("5_j424o")
theme_override_font_sizes/font_size = 8
text = "Je me fait sauver par 
un chevalier pauvre!"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
